header align, mobile menu fix

--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ header {
 .menu-list {
   width: 100%;
   position: absolute;
-  bottom: 60px;
+  bottom: 90px;
   right: 20px;
 }
 
